2.8 Grease pencil drawings not visible when contained in a collection instanced in a foreign scene. #63563

Closed
opened 2019-04-13 10:54:05 +02:00 by Tomasz Kaye · 7 comments

System Information
Operating system: MacOS 10.14
Graphics card: Radeon Pro 580 8192 MB

Blender Version
Broken: 2.80.0 2019-04-13 45b810e1f8 x86_64

Short description of error
Grease pencil drawings are not visible when contained in a collection that is instanced in a foreign scene.

Exact steps for others to reproduce the error

  • Create a new '2D animation' file.
  • Draw a grease pencil stroke in the selected GP object (inside the collection named "Collection")
  • Create a new scene.
  • In the new scene: Object Mode, Add > Collection Instance > Collection.
  • The collection instance is added but the stroke isn't visible in the new scene (I expected that it would be).
**System Information** Operating system: MacOS 10.14 Graphics card: Radeon Pro 580 8192 MB **Blender Version** Broken: 2.80.0 2019-04-13 45b810e1f8b0 x86_64 **Short description of error** Grease pencil drawings are not visible when contained in a collection that is instanced in a foreign scene. **Exact steps for others to reproduce the error** - Create a new '2D animation' file. - Draw a grease pencil stroke in the selected GP object (inside the collection named "Collection") - Create a new scene. - In the new scene: Object Mode, Add > Collection Instance > Collection. - The collection instance is added but the stroke isn't visible in the new scene (I expected that it would be).
Author

Added subscriber: @info-27

Added subscriber: @info-27
Author

Possibly related. Blender crashes if I then do the following:

  • Save the .blend file described above.
  • Open a new file (2D animation)
  • File > Link > (select to the "Collection" item inside the saved .blend file's Collection group, and click 'link from library')
  • Blender crashes

This gets written to blender.crash.txt

# Blender 2.80 (sub 53), Commit date: 2019-04-03 22:51, Hash ef91df608a39
bpy.context.space_data.system_bookmarks_active = 1  # Property

# backtrace
0   blender                             0x000000010dea7157 BLI_system_backtrace + 55
1   blender                             0x000000010d30983a sig_handle_crash + 362
2   libsystem_platform.dylib            0x00007fff65d2ab3d _sigtramp + 29
3   AMDRadeonX4000GLDriver              0x000000011ca08e9e glrATI_SI_ResourceMgrValidateConstantState + 2573
4   blender                             0x000000010d69ac6d draw_setting_widget + 877
5   blender                             0x000000010d69a5cd ANIM_channel_draw_widgets + 2589
6   blender                             0x000000010d3417ff draw_channel_names + 735
7   blender                             0x000000010d348418 action_channel_region_draw + 88
8   blender                             0x000000010d635ea8 ED_region_do_draw + 360
9   blender                             0x000000010d30c5b6 wm_draw_update + 1782
10  blender                             0x000000010d30a2c0 WM_main + 48
11  blender                             0x000000010d30602f main + 927
12  libdyld.dylib                       0x00007fff65b41085 start + 1
13  ???                                 0x0000000000000001 0x0 + 1

Possibly related. Blender crashes if I then do the following: - Save the .blend file described above. - Open a new file (2D animation) - File > Link > (select to the "Collection" item inside the saved .blend file's Collection group, and click 'link from library') - Blender crashes This gets written to blender.crash.txt ``` # Blender 2.80 (sub 53), Commit date: 2019-04-03 22:51, Hash ef91df608a39 bpy.context.space_data.system_bookmarks_active = 1 # Property # backtrace 0 blender 0x000000010dea7157 BLI_system_backtrace + 55 1 blender 0x000000010d30983a sig_handle_crash + 362 2 libsystem_platform.dylib 0x00007fff65d2ab3d _sigtramp + 29 3 AMDRadeonX4000GLDriver 0x000000011ca08e9e glrATI_SI_ResourceMgrValidateConstantState + 2573 4 blender 0x000000010d69ac6d draw_setting_widget + 877 5 blender 0x000000010d69a5cd ANIM_channel_draw_widgets + 2589 6 blender 0x000000010d3417ff draw_channel_names + 735 7 blender 0x000000010d348418 action_channel_region_draw + 88 8 blender 0x000000010d635ea8 ED_region_do_draw + 360 9 blender 0x000000010d30c5b6 wm_draw_update + 1782 10 blender 0x000000010d30a2c0 WM_main + 48 11 blender 0x000000010d30602f main + 927 12 libdyld.dylib 0x00007fff65b41085 start + 1 13 ??? 0x0000000000000001 0x0 + 1 ```

Added subscriber: @antoniov

Added subscriber: @antoniov
Antonio Vazquez self-assigned this 2019-04-13 11:53:23 +02:00

This crash is a different issue. The object not visible is due a different reason...I'm thinking how to fix it.

This crash is a different issue. The object not visible is due a different reason...I'm thinking how to fix it.

This issue was referenced by f110daa2c9

This issue was referenced by f110daa2c9fcd7ad20c3136a57999c6f62d83b38

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @tonton

Added subscriber: @tonton
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63563
No description provided.